# outline-detection

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/: README.md
data/samples/: INPUT.txt  INPUT1.txt  page_layout_cases.txt
docs/: README.md  evaluation.md  huggingface.md  rules.md  terminology.md  workflow.md
scripts/: README.md  compare_rule_crf.py  fetch_crf_artifacts_vastai2.ps1  push_hub_repos.py  run_crf_train.ps1  run_crf_train.sh
src/outline_detection/: __init__.py  analyzer.py  api.py  cli.py  crf.py  detector.py  evaluation.py  page_layout.py  paths.py  utils.py
tests/: test_page_layout.py
